--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "vue": "^2.7.16",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
